# bambu-farm

./: Makefile  README.md
bambu-farm-client/: Cargo.toml  Makefile  build.rs
bambu-farm-client/cpp/: ProjectTask.hpp  api.cpp  api.hpp  bambu_networking.hpp
bambu-farm-client/src/: api.rs  lib.rs
bambu-farm-server/: .gitignore  Cargo.toml  bambufarm_example.toml  build.rs
bambu-farm-server/proto/: service.proto
bambu-farm-server/src/: api.rs  main.rs  slicer_ca.pem
