[package]
name = "bambu-farm-client"
version = "0.1.0"
edition = "2021"

[build]
lto = "off"

[lib]
name = "bambu_farm_client"
crate-type = ["staticlib"]

[dependencies]
config = { version = "0.13.3", features = ["toml"] }
cxx = "1.0"
futures = "0.3.28"
lazy_static = "1.4.0"
env_logger = "0.10.0"
log = "0.4.20"
prost = "0.12"
rustls-native-certs = "0.6.3"
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.10"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
cxx-build = "1.0"
tonic-build = "0.10"
