[package]
name = "bambu-farm-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
ftp = { git = "https://github.com/mattnenterprise/rust-ftp", features = ["secure"] }
tonic = { version = "0.10" }
futures = "0.3.28"
lazy_static = "1.4.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
async-trait = "0.1.73"
paho-mqtt = "0.12.1"
tempfile = "3.8.0"
env_logger = "0.10.0"

[build-dependencies]
tonic-build = "0.10"
